<resources>
    <string name="app_name">OpenHouz</string>
    <string name="feedback_title">Feedback</string>
    <string name="comments_text">Your Comments</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone Number</string>
    <string name="rupee">\u20B9</string>
    <!--Property detail card-->
    <string name="space_details_text">Space Details</string>
    <string name="building_specs_text">Building Specs</string>
    <string name="nearby_metro_text">Nearby Metro Stations</string>
    <string name="amenities_text">Amenities</string>
    <string name="restrictions_text">Restrictions</string>
    <!--Bot questions-->
    <string-array name="questions">
        <item>@string/question1</item>
        <item>@string/question2</item>
        <item>@string/question3</item>
        <item>@string/question4</item>
        <item>@string/question5</item>
    </string-array>
    <string name="question1">Hi there, I am Alan. I am going to be your personal realtor and going to help you find a place.</string>
    <string name="question2">What kind of apartment are you looking for?</string>
    <string name="question3">In which area are you looking for? You can select multiple neighbourhoods</string>
    <string name="question4">What is your budget?</string>
    <string name="question5">Ok, check these apartments out!</string>
    <!--Hint text-->
    <string-array name="wait_hints">
        <item>@string/hint_wait_question1</item>
        <item>@string/hint_question1_done</item>
    </string-array>
    <string name="hint_wait_question1">Alan is giving intro</string>
    <string name="hint_question1_done">Say Hi Alan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="square_feet_text">SQFT.</string>
    <string name="bhk_text">BHK</string>
    <string name="rent_text">RENT</string>

    <string name="when_text">When</string>
    <string name="agent_text">Agent</string>
    <string name="already_viewed">You already viewed this apartment</string>

    <string name="cancel_viewing">Cancel Viewing</string>
    <string name="get_directions">Get Directions</string>
</resources>

