<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedbackActivity">

    <RelativeLayout
        android:id="@+id/feedback_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/feedback_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22sp" />

        <ImageView
            android:id="@+id/send_feedback"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/close_feedback"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_toLeftOf="@+id/send_feedback"
            android:layout_toStartOf="@+id/send_feedback"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/feedback_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_heading">

        <EditText
            android:id="@+id/comments_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_text"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_text"
            android:hint="@string/name_text"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text"
            android:hint="@string/email_text"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text"
            android:hint="@string/phone_text"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:background="@drawable/home_background"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
