<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dimen_16dp"
    >

    <RelativeLayout
        android:id="@+id/property_image_background"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:background="@drawable/circular_background">

        <com.technawabs.openhouz.views.uicomponents.RoundedImageView
            android:id="@+id/property_image"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:id="@+id/property_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_toEndOf="@+id/property_image_background"
        android:maxLines="1"
        android:text="54,000" />

    <TextView
        android:id="@+id/property_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_price"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_toEndOf="@+id/property_image_background"
        android:maxLines="3"
        android:text="Gandhi Nagar" />

    <LinearLayout
        android:id="@+id/meeting_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_image_background"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        >

        <RelativeLayout
            android:id="@+id/meeting_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/when_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_text"
                android:textSize="@dimen/text_18sp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/clock_icon"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:src="@mipmap/ic_alarm"
                android:layout_below="@+id/when_text"
                android:layout_margin="@dimen/dimen_6dp"
                />

            <TextView
                android:id="@+id/data_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:layout_alignBottom="@+id/clock_icon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/clock_icon"
                android:maxLines="2"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meeting_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/agent_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agent_text"
                android:textSize="@dimen/text_18sp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/agent_icon"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:src="@mipmap/ic_profile"
                android:layout_below="@+id/agent_text"
                android:layout_margin="@dimen/dimen_6dp"
                />

            <TextView
                android:id="@+id/agent_name_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:layout_alignBottom="@+id/agent_icon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/agent_icon"
                android:maxLines="2"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/already_viewed_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/meeting_section"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/already_viewed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20sp"
            android:gravity="center"
            />
    </LinearLayout>

</RelativeLayout>
